--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./service.tenant.registry:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
-      - 5000:80
+      - 5000:8000
