--- a/service.config/package.json
+++ b/service.config/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "nodejs-image-starter",
+    "name": "com.olili.landlord.service.config",
     "version": "1.0.0",
-    "description": "tenant registry",
+    "description": "config sever for landord system",
     "author": "Daniel Olili <olilidaniel48@gmail.com>",
     "license": "MIT",
     "main": "server.js",
@@ -10,11 +10,10 @@
     },
     "keywords": [
         "nodejs",
+        "bootstrap",
         "express"
     ],
     "dependencies": {
-        "axios": "^0.19.0",
-        "couchbase": "^2.6.9",
         "express": "^4.17.1"
     }
 }
