--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
       - /usr/src/app/node_modules
     ports:
       - 5001:3001
-    depends_on: config-server
+    depends_on:
+      - config-server
   tenant-registry:
     build:
       context: ./service.tenant.registry
@@ -29,4 +30,6 @@ services:
       - /usr/src/app/node_modules
     ports:
       - 5002:8000
-    depends_on: house-registry
+    depends_on:
+      - house-registry
+      - config-server
