--- a/service.landlord.registry/Dockerfile
+++ b/service.landlord.registry/Dockerfile
@@ -8,10 +8,6 @@ WORKDIR /usr/src/app
 
 COPY package.json .
 
-# RUN npm audit fix
-
-# RUN npm install --save axios
-
 RUN npm install
 
-ENTRYPOINT ["nodemon", "server.js"]
+ENTRYPOINT [ "nodemon" ]
