(Config) : add get config by get req

--- a/service.config/config.json
+++ b/service.config/config.json
@@ -1,16 +1,15 @@
 {
-    "database" : {
-        "houses" : {
-            "bucket" : "houses",
-            "host" : "localhost",
-            "username" : "pidscrypt",
-            "pass" : "Pidscrypt123567"
-        },
-        "tenants" : {
-            "bucket" : "tenants",
-            "host" : "localhost",
-            "username" : "pidscrypt",
-            "pass" : "Pidscrypt123567"
+    "services" : {
+        "service.properties.registry" : {
+            "db" : {
+                "bucket" : "properties",
+                "host" : "localhost",
+                "username" : "properties",
+                "pass" : "Pr0p3rt132"
+            },
+            "server" : {
+                "port" : 3000
+            }
         }
     }
 }
