--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "olili2017.github.io",
-  "version": "0.1.0",
+  "name": "olili2017.github.io.landlord-client",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "^4.6.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.15",
